minor updates to doc strings

--- a/notebooks/08.ipynb
+++ b/notebooks/08.ipynb
@@ -124,118 +124,161 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 141,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[2, 2, 2, ..., 2, 1, 2],\n",
-       "       [2, 0, 2, ..., 2, 2, 2],\n",
-       "       [0, 0, 2, ..., 2, 2, 1],\n",
-       "       ...,\n",
-       "       [2, 2, 2, ..., 1, 1, 0],\n",
-       "       [1, 1, 0, ..., 0, 0, 1],\n",
-       "       [1, 2, 1, ..., 0, 1, 1]])"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "shaped_layered = layered_pixels.reshape(1,-1,len(layered_pixels))[0]\n",
-    "shaped_layered"
+    "--- Part Two ---\n",
+    "Now you're ready to decode the image. The image is rendered by stacking the layers and aligning the pixels with the same positions in each layer. The digits indicate the color of the corresponding pixel: 0 is black, 1 is white, and 2 is transparent.\n",
+    "\n",
+    "The layers are rendered with the first layer in front and the last layer in back. So, if a given position has a transparent pixel in the first and second layers, a black pixel in the third layer, and a white pixel in the fourth layer, the final image would have a black pixel at that position.\n",
+    "\n",
+    "For example, given an image 2 pixels wide and 2 pixels tall, the image data 0222112222120000 corresponds to the following image layers:\n",
+    "```\n",
+    "Layer 1: 02\n",
+    "         22\n",
+    "\n",
+    "Layer 2: 11\n",
+    "         22\n",
+    "\n",
+    "Layer 3: 22\n",
+    "         12\n",
+    "\n",
+    "Layer 4: 00\n",
+    "         00\n",
+    "```\n",
+    "Then, the full image can be found by determining the top visible pixel in each position:\n",
+    "\n",
+    "The top-left pixel is black because the top layer is 0.\n",
+    "The top-right pixel is white because the top layer is 2 (transparent), but the second layer is 1.\n",
+    "The bottom-left pixel is white because the top two layers are 2, but the third layer is 1.\n",
+    "The bottom-right pixel is black because the only visible pixel in that position is 0 (from layer 4).\n",
+    "So, the final image looks like this:\n",
+    "```\n",
+    "01\n",
+    "10\n",
+    "```\n",
+    "What message is produced after decoding your image?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 2, 2, 2],\n",
-       "       [1, 1, 2, 2],\n",
-       "       [2, 2, 1, 2],\n",
-       "       [0, 0, 0, 0]])"
+       "(100, 6, 25)"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test2 = str_to_array('0222112222120000', 2, 2)\n",
-    "\n",
-    "shaped = test2.reshape(1,-1,4)[0]\n",
-    "shaped"
+    "h, l, w = layered_pixels.shape\n",
+    "h, l, w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 1, 0])"
+       "(100, 150)"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "#print('output', output)\n",
-    "\n",
-    "\n",
-    "def combine_layers(shaped):\n",
-    "    output = np.array([2 for _ in range(len(shaped))])\n",
+    "shaped_layered = layered_pixels.reshape(1, -1, l*w)[0]\n",
+    "shaped_layered.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine_layers(shaped, verbose=False):\n",
+    "    \"\"\"This is very NON-ideal. I'm sure there's a way to slice w/ \n",
+    "    NumPy magic and get something that avoids nested for loops.\"\"\"\n",
+    "    output = np.array([2 for _ in range(shaped.shape[1])])\n",
+    "    \n",
+    "    if verbose:\n",
+    "        print(output.shape, 'output')\n",
+    "        print(shaped.shape, 'shape of input')\n",
     "    \n",
     "    for layer in shaped[::-1]:\n",
     "        new_output = []\n",
     "        \n",
-    "        for new, old in zip(layer, output[:]):\n",
+    "        for new, old in zip(layer, output):\n",
     "            if new != 2:\n",
     "                new_output.append(new)\n",
     "            else: \n",
     "                new_output.append(old)\n",
     "\n",
     "        output = np.array(new_output)\n",
-    "    return output\n",
-    "    \n",
-    "            \n",
-    "combine_layers(shaped)      "
+    "        \n",
+    "    if verbose:    \n",
+    "        print(output.shape, 'shape of output')\n",
+    "        \n",
+    "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 100 into shape (25,6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-143-980d8915a9a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcombined\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcombine_layers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshaped_layered\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcombined\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 100 into shape (25,6)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test passed\n"
+     ]
+    }
+   ],
+   "source": [
+    "test2 = str_to_array('0222112222120000', 2, 2)\n",
+    "\n",
+    "shaped = test2.reshape(1,-1,4)[0]\n",
+    "#print(shaped.shape, '  is the shape')\n",
+    "\n",
+    "assert combine_layers(shaped).tolist() == [0,1,1,0]\n",
+    "print('test passed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 0 1 0 0 1 1 0 0 1 0 0 1 0 1 1 1 1 0 0 1 1 0 0]\n",
+      " [1 0 1 0 0 1 0 0 1 0 1 0 0 1 0 0 0 0 1 0 1 0 0 1 0]\n",
+      " [1 1 0 0 0 1 0 0 1 0 1 0 0 1 0 0 0 1 0 0 1 0 0 1 0]\n",
+      " [1 0 1 0 0 1 1 1 1 0 1 0 0 1 0 0 1 0 0 0 1 1 1 1 0]\n",
+      " [1 0 1 0 0 1 0 0 1 0 1 0 0 1 0 1 0 0 0 0 1 0 0 1 0]\n",
+      " [1 0 0 1 0 1 0 0 1 0 0 1 1 0 0 1 1 1 1 0 1 0 0 1 0]]\n"
      ]
     }
    ],
    "source": [
     "combined = combine_layers(shaped_layered)\n",
-    "combined.reshape(width, height)"
+    "finished = combined.reshape(height, width)\n",
+    "print(finished)"
    ]
   },
   {
