create load_data function

--- a/notebooks/07.ipynb
+++ b/notebooks/07.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,562 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from advent import run"
+    "from advent import run, load_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = load_data(7, intcode=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3,\n",
+       " 8,\n",
+       " 1001,\n",
+       " 8,\n",
+       " 10,\n",
+       " 8,\n",
+       " 105,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 21,\n",
+       " 38,\n",
+       " 55,\n",
+       " 72,\n",
+       " 93,\n",
+       " 118,\n",
+       " 199,\n",
+       " 280,\n",
+       " 361,\n",
+       " 442,\n",
+       " 99999,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 5,\n",
+       " 9,\n",
+       " 101,\n",
+       " 4,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 99,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 5,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 99,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 4,\n",
+       " 9,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 99,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 102,\n",
+       " 5,\n",
+       " 9,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 99,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 3,\n",
+       " 9,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 102,\n",
+       " 5,\n",
+       " 9,\n",
+       " 9,\n",
+       " 101,\n",
+       " 4,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 99,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 1,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 1,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 102,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 1,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 102,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 1,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 102,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 102,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 99,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 1,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 102,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 102,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 102,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 1,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 1,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 99,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 1,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 1,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 102,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 1,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 99,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 1,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 1,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 102,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 1,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1001,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 102,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 99,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 1,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 1,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 2,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 1002,\n",
+       " 9,\n",
+       " 2,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 3,\n",
+       " 9,\n",
+       " 101,\n",
+       " 1,\n",
+       " 9,\n",
+       " 9,\n",
+       " 4,\n",
+       " 9,\n",
+       " 99]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data"
    ]
   },
   {
