rename "notebooks" forlder to "code"

--- a/code/08.ipynb
+++ b/code/08.ipynb
@@ -210,7 +210,8 @@
    "source": [
     "def combine_layers(shaped, verbose=False):\n",
     "    \"\"\"This is very NON-ideal. I'm sure there's a way to slice w/ \n",
-    "    NumPy magic and get something that avoids nested for loops.\"\"\"\n",
+    "    NumPy magic and get something that avoids nested for loops.\n",
+    "    \"\"\"\n",
     "    output = np.array([2 for _ in range(shaped.shape[1])])\n",
     "    \n",
     "    if verbose:\n",
