--- a/code/07.ipynb
+++ b/code/07.ipynb
@@ -68,30 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 1, 2, 3, 4),\n",
-       " (0, 1, 2, 4, 3),\n",
-       " (0, 1, 3, 2, 4),\n",
-       " (0, 1, 3, 4, 2),\n",
-       " (0, 1, 4, 2, 3),\n",
-       " (0, 1, 4, 3, 2),\n",
-       " (0, 2, 1, 3, 4),\n",
-       " (0, 2, 1, 4, 3)]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sequences = permutations(range(5), 5)\n",
-    "list(sequences)[:8]"
+    "sequences = permutations(range(5), 5)\n"
    ]
   },
   {
@@ -195,6 +176,193 @@
    "source": [
     "input()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Computer():\n",
+    "    \n",
+    "    # Intcode Computer Codes\n",
+    "    HALT = 99\n",
+    "    ADD = 1\n",
+    "    MULT = 2\n",
+    "    GET_IN = 3\n",
+    "    PRINT_OUT = 4\n",
+    "    JUMP_TRUE = 5\n",
+    "    JUMP_FALSE = 6\n",
+    "    LESS_THAN = 7\n",
+    "    EQUAL = 8\n",
+    "    \n",
+    "    # Saved States\n",
+    "    \n",
+    "    _input = None\n",
+    "    printout = None\n",
+    "    \n",
+    "    # Methods\n",
+    "    \n",
+    "    def opcode(self, raw_code):\n",
+    "        \"\"\"Convert an opcode: ABCDE into {code, param_count, [modes]}\n",
+    "\n",
+    "        Will auto-adjust the param_count and length of modes based\n",
+    "        on the dictionary param_counts\n",
+    "\n",
+    "        ex) ABCDE  --  if DE is either 01 or 02:\n",
+    "        {\n",
+    "        'code': DE, \n",
+    "        'param_count': 3, \n",
+    "        'modes': [C, B, A],\n",
+    "        }\n",
+    "        \"\"\"\n",
+    "        filled_code = str(raw_code).zfill(5)\n",
+    "\n",
+    "        param_counts = {\n",
+    "            1: 3, \n",
+    "            2: 3, \n",
+    "            3: 1, \n",
+    "            4: 1, \n",
+    "            5: 2,\n",
+    "            6: 2,\n",
+    "            7: 3,\n",
+    "            8: 3,\n",
+    "            99: 0\n",
+    "        }\n",
+    "\n",
+    "        # split @ 2 from right side, then reverse everything left of split\n",
+    "        modes = filled_code[:-2][::-1]\n",
+    "        code = int(filled_code[-2:])\n",
+    "        count = param_counts[code]\n",
+    "\n",
+    "        modes = [int(x) for x in modes[:count]] \n",
+    "\n",
+    "        return {'code': code, 'param_count': count, 'modes': modes}\n",
+    "    \n",
+    "    def modeify(self, intcode, i):\n",
+    "        \"\"\"Apply a mode to a parameter\"\"\"\n",
+    "        j = i + 1\n",
+    "        _opcode = opcode(intcode[i])\n",
+    "        params = intcode[j: j + _opcode['param_count']]\n",
+    "        modes = _opcode['modes']\n",
+    "\n",
+    "        mode_covert = {\n",
+    "            0: lambda x: intcode[x],    # position mode\n",
+    "            1: lambda x: x              # immediate mode\n",
+    "        }\n",
+    "\n",
+    "        output = [mode_covert[mode](param) for mode, param in zip(modes, params)]\n",
+    "        return output\n",
+    "    \n",
+    "    \n",
+    "    def get_new_pos(self, intcode, mode, i, delta_i):\n",
+    "        if mode == 0:\n",
+    "            return intcode[i + delta_i]\n",
+    "        elif mode == 1:\n",
+    "            return i + delta_i\n",
+    "        else:\n",
+    "            print(f'Mode not recognized. {mode} is not in [0, 1].')\n",
+    "            raise ValueError\n",
+    "    \n",
+    "    \n",
+    "    def single_code(self, intcode, i, halt=False, verbose=False):\n",
+    "        \"\"\"Process a single intstruction from intcode\n",
+    "\n",
+    "        return the same format we started with:\n",
+    "        (intcode, i, halt_status)\n",
+    "        \"\"\"    \n",
+    "        _opcode = opcode(intcode[i])\n",
+    "        code = _opcode['code']\n",
+    "        modes = _opcode['modes']\n",
+    "        args = modeify(intcode, i)\n",
+    "\n",
+    "        if verbose:\n",
+    "            print('params', intcode[i+1: i+1+_opcode['param_count']])\n",
+    "            print('modes', ['pos' if x is 0 else 'imm' for x in _opcode['modes']])\n",
+    "            print('args', args)\n",
+    "\n",
+    "        if code == HALT:\n",
+    "            return intcode, i, True\n",
+    "        elif code == ADD:\n",
+    "            new_pos = get_new_pos(intcode, modes[-1], i, 3)\n",
+    "            new_value = sum(args[:-1])\n",
+    "        elif code == MULT:\n",
+    "            new_pos = get_new_pos(intcode, modes[-1], i, 3)\n",
+    "            new_value = args[0] * args[1]\n",
+    "        elif code == GET_IN:\n",
+    "            new_pos = get_new_pos(intcode, modes[-1], i, 1)\n",
+    "            new_value = int(input('>>'))\n",
+    "            self._input = new_value\n",
+    "        elif code == PRINT_OUT:\n",
+    "            new_pos = get_new_pos(intcode, modes[-1], i, 1)\n",
+    "            printout = intcode[new_pos]\n",
+    "            self.printout = printout\n",
+    "            print(printout)\n",
+    "        elif code == JUMP_TRUE:\n",
+    "            if args[0]:\n",
+    "                new_pointer = args[1]\n",
+    "            else:\n",
+    "                new_pointer = i + 3\n",
+    "        elif code == JUMP_FALSE:\n",
+    "            if args[0] == 0:\n",
+    "                new_pointer = args[1]\n",
+    "            else:\n",
+    "                new_pointer = i + 3\n",
+    "        elif code == LESS_THAN:\n",
+    "            if args[0] < args[1]:\n",
+    "                new_value = 1\n",
+    "            else:\n",
+    "                new_value = 0\n",
+    "            new_pos = get_new_pos(intcode, modes[-1], i, 3)\n",
+    "        elif code == EQUAL:\n",
+    "            if args[0] == args[1]:\n",
+    "                new_value = 1\n",
+    "            else:\n",
+    "                new_value = 0\n",
+    "            new_pos = get_new_pos(intcode, modes[-1], i, 3)\n",
+    "\n",
+    "        if code not in [PRINT_OUT, JUMP_TRUE, JUMP_FALSE]:\n",
+    "            intcode[new_pos] = new_value\n",
+    "            if verbose:\n",
+    "                print(f'updating intcode[{new_pos}] to {intcode[new_pos]}')\n",
+    "\n",
+    "        if code not in [JUMP_TRUE, JUMP_FALSE]:\n",
+    "            i += _opcode['param_count'] + 1\n",
+    "        else:\n",
+    "            i = new_pointer\n",
+    "\n",
+    "        return intcode, i, halt\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'code': 2, 'param_count': 3, 'modes': [1, 0, 1]}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = Computer()\n",
+    "a.opcode('10102')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
